# config

./: README.md
aosp_ipr/: android.ipr
aosp_ipr/development/ide/clion/art/benchmark/libartbenchmark-arm-android/: CMakeLists.txt
aosp_ipr/development/ide/clion/art/benchmark/libartbenchmark-arm64-android/: CMakeLists.txt
aosp_ipr/development/ide/clion/art/benchmark/libartbenchmark-micronative-host-x86-linux/: CMakeLists.txt
aosp_ipr/development/ide/clion/art/benchmark/libartbenchmark-micronative-host-x86_64-linux/: CMakeLists.txt
aosp_ipr/development/ide/clion/art/benchmark/libartbenchmark-x86-linux/: CMakeLists.txt
aosp_ipr/development/ide/clion/art/benchmark/libartbenchmark-x86_64-linux/: CMakeLists.txt
aosp_ipr/development/ide/clion/art/cmdline/art_cmdline_tests-arm-android/: CMakeLists.txt
aosp_ipr/development/ide/clion/art/cmdline/art_cmdline_tests-arm64-android/: CMakeLists.txt
aosp_ipr/development/ide/clion/art/cmdline/art_cmdline_tests-x86-linux/: CMakeLists.txt
aosp_ipr/development/ide/clion/art/cmdline/art_cmdline_tests-x86_64-linux/: CMakeLists.txt
aosp_ipr/development/ide/clion/art/compiler/art_compiler_host_tests-x86-linux/: CMakeLists.txt
aosp_ipr/development/ide/clion/art/compiler/art_compiler_host_tests-x86_64-linux/: CMakeLists.txt
aosp_ipr/development/ide/clion/art/compiler/art_compiler_tests-arm-android/: CMakeLists.txt
aosp_ipr/development/ide/clion/art/compiler/art_compiler_tests-arm64-android/: CMakeLists.txt
aosp_ipr/development/ide/clion/art/compiler/art_compiler_tests-x86-linux/: CMakeLists.txt
aosp_ipr/development/ide/clion/art/compiler/art_compiler_tests-x86_64-linux/: CMakeLists.txt
aosp_ipr/development/ide/clion/art/compiler/libart-compiler-arm-android/: CMakeLists.txt
aosp_ipr/development/ide/clion/art/compiler/libart-compiler-arm64-android/: CMakeLists.txt
aosp_ipr/development/ide/clion/art/compiler/libart-compiler-gtest-arm-android/: CMakeLists.txt
aosp_ipr/development/ide/clion/art/compiler/libart-compiler-gtest-arm64-android/: CMakeLists.txt
aosp_ipr/development/ide/clion/art/compiler/libart-compiler-gtest-x86-linux/: CMakeLists.txt
aosp_ipr/development/ide/clion/art/compiler/libart-compiler-gtest-x86_64-linux/: CMakeLists.txt
aosp_ipr/development/ide/clion/art/compiler/libart-compiler-x86-linux/: CMakeLists.txt
aosp_ipr/development/ide/clion/art/compiler/libart-compiler-x86_64-linux/: CMakeLists.txt
aosp_ipr/development/ide/clion/art/compiler/libartd-compiler-arm-android/: CMakeLists.txt
aosp_ipr/development/ide/clion/art/compiler/libartd-compiler-arm64-android/: CMakeLists.txt
aosp_ipr/development/ide/clion/art/compiler/libartd-compiler-x86-linux/: CMakeLists.txt
aosp_ipr/development/ide/clion/art/compiler/libartd-compiler-x86_64-linux/: CMakeLists.txt
aosp_ipr/development/ide/clion/art/dalvikvm/dalvikvm-arm-android/: CMakeLists.txt
aosp_ipr/development/ide/clion/art/dalvikvm/dalvikvm-arm64-android/: CMakeLists.txt
aosp_ipr/development/ide/clion/art/dalvikvm/dalvikvm-x86-linux/: CMakeLists.txt
aosp_ipr/development/ide/clion/art/dalvikvm/dalvikvm-x86_64-linux/: CMakeLists.txt
aosp_ipr/development/ide/clion/art/dex2oat/art_dex2oat_tests-arm-android/: CMakeLists.txt
aosp_ipr/development/ide/clion/art/dex2oat/art_dex2oat_tests-arm64-android/: CMakeLists.txt
aosp_ipr/development/ide/clion/art/dex2oat/art_dex2oat_tests-x86-linux/: CMakeLists.txt
aosp_ipr/development/ide/clion/art/dex2oat/art_dex2oat_tests-x86_64-linux/: CMakeLists.txt
aosp_ipr/development/ide/clion/art/dex2oat/dex2oat-arm-android/: CMakeLists.txt
aosp_ipr/development/ide/clion/art/dex2oat/dex2oat-x86_64-linux/: CMakeLists.txt
aosp_ipr/development/ide/clion/art/dex2oat/dex2oatd-arm-android/: CMakeLists.txt
aosp_ipr/development/ide/clion/art/dex2oat/dex2oatd-x86_64-linux/: CMakeLists.txt
aosp_ipr/development/ide/clion/art/dex2oat/dex2oatds-x86_64-linux/: CMakeLists.txt
aosp_ipr/development/ide/clion/art/dex2oat/dex2oats-x86_64-linux/: CMakeLists.txt
aosp_ipr/development/ide/clion/art/runtime/art_runtime_tests-arm64-android/: CMakeLists.txt
aosp_ipr/development/ide/clion/art/runtime/openjdkjvm/libopenjdkjvm-x86_64-linux/: CMakeLists.txt
aosp_ipr/development/ide/clion/bionic/libc/crtbegin_so1-arm64-android/: CMakeLists.txt
aosp_ipr/development/ide/clion/bionic/libc/crtend_android-arm64-android/: CMakeLists.txt
aosp_ipr/development/ide/clion/bionic/libc/crtend_so-arm-android/: CMakeLists.txt
aosp_ipr/development/ide/clion/bionic/tests/libs/bionic_tests_zipalign-x86_64-linux/: CMakeLists.txt
aosp_ipr/development/ide/clion/frameworks/av/media/libstagefright/libstagefright-arm-android/: CMakeLists.txt
aosp_ipr/development/ide/clion/frameworks/base/libs/androidfw/libandroidfw-x86-windows/: CMakeLists.txt
aosp_ipr/development/ide/clion/frameworks/base/media/jni/libmedia_jni-arm-android/: CMakeLists.txt
aosp_ipr/development/ide/clion/frameworks/base/tools/aapt2/aapt2_tests-x86_64-linux/: CMakeLists.txt
aosp_ipr/development/ide/clion/frameworks/base/tools/aapt2/libaapt2-x86_64-windows/: CMakeLists.txt
aosp_ipr/development/ide/clion/frameworks/native/: CMakeLists.txt
aosp_ipr/development/ide/clion/libnativehelper/libnativehelper-arm-android/: CMakeLists.txt
aosp_ipr/development/ide/clion/libnativehelper/libnativehelper-arm64-android/: CMakeLists.txt
aosp_ipr/development/ide/clion/libnativehelper/libnativehelper-x86-linux/: CMakeLists.txt
aosp_ipr/development/ide/clion/libnativehelper/libnativehelper-x86_64-linux/: CMakeLists.txt
aosp_ipr/development/ide/clion/libnativehelper/libnativehelper_compat_libc++-arm-android/: CMakeLists.txt
aosp_ipr/development/ide/clion/libnativehelper/libnativehelper_compat_libc++-arm64-android/: CMakeLists.txt
aosp_ipr/development/ide/clion/system/bt/hci/net_test_hci-arm-android/: CMakeLists.txt
aosp_ipr/development/ide/clion/system/extras/ext4_utils/libext4_utils-x86-linux/: CMakeLists.txt
aosp_ipr/development/ide/clion/system/extras/libfec/libfec-x86-linux/: CMakeLists.txt
(+2483 files in other folders)
